Name and Student number added

--- a/SlotMachineApp/Form1.resx
+++ b/SlotMachineApp/Form1.resx
@@ -400,4 +400,7 @@
         AgABAQ3/AccI/xAABP8B8BP/AYABfxb/EAAE/wH9K/8QADD/EAAw/xAAMP8QADD/EAAL
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>52</value>
+  </metadata>
 </root>
